namespace Aster.Core.Gameplay.Entity.Enemy
{
    public class EnemyController
    {
        
    }
}