using Aster.Light;
using UnityEngine.Android;

namespace Aster.Towers
{
    public class Emitter : BaseTower
    {
        public override void OnLightRayHit(LightRay ray)
        {
            //TODO: Write This
            throw new System.NotImplementedException();
        }
    }
}